# pydlnm

./: .gitignore  README.md  pyproject.toml
pydlnm/: __init__.py  attribution.py  basis.py  basis_functions.py  centering.py  crossreduce.py  enhanced_splines.py  glm_integration.py  improved_glm.py  meta_analysis.py  model_utils.py  multi_location.py  penalized.py  prediction.py  rpy2_glm.py  seasonality.py  utils.py
pydlnm/data/: __init__.py  chicago_nmmaps.csv
pydlnm/tests/: __init__.py  test_basic.py
validation/: README_validation.md
validation/results/: complete_rr_curves_summary.csv  final_rr_comparison_results.csv  mmt_results.csv  rr_curve_East.csv  rr_curve_East_Midlands.csv  rr_curve_London.csv  rr_curve_North_East.csv  rr_curve_North_West.csv  rr_curve_South_East.csv  rr_curve_South_West.csv  rr_curve_Wales.csv  rr_curve_West_Midlands.csv  rr_curve_Yorkshire___Humber.csv
validation/scripts/: analyze_all_cities_pydlnm.py  create_complete_validation_plots.py  final_rr_curve_test.py  generate_all_regions_rr_curves.py  plot_available_rr_curves.py  plot_rr_curves_comparison.py
