[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydlnm"
version = "0.1.0"
description = "Distributed Lag Non-Linear Models in Python"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Python DLNM Contributors", email = "pydlnm@example.com"}
]
keywords = ["epidemiology", "distributed lag", "non-linear models", "exposure-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "jupyter>=1.0.0",
    "nbsphinx>=0.8.0",
]
interactive = [
    "plotly>=5.0.0",
    "ipywidgets>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/aedessler/pydlnm"
Documentation = "https://github.com/aedessler/pydlnm"
Repository = "https://github.com/aedessler/pydlnm.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydlnm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=pydlnm --cov-report=html --cov-report=term"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true